new proj/src/objects/ITO_Commercial__c.object
<CustomObject>
    <fields>
        <fullName>Comments_Cc__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_Bid_Legal_Entity_Name2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Bid Legal Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ITO - OTR Handoffs (GE Bid Legal Entity Name)</relationshipLabel>
        <relationshipName>ITO_OTR_Handoffs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Bid_Legal_Entity_Name3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Bid Legal Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ITO - OTR Handoffs (GE Bid Legal Entity Name)</relationshipLabel>
        <relationshipName>ITO_OTR_Handoffs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Bid_Legal_Entity_Name4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Bid Legal Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ITO - OTR Handoffs (GE Bid Legal Entity Name)</relationshipLabel>
        <relationshipName>ITO_OTR_Handoffs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_Consortium2__c</fullName>
        <label>GE Consortium2?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Consortium3__c</fullName>
        <label>GE Consortium3?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Agreement_Type__c</fullName>
        <description>Agreement Type</description>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMP+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combo O&amp;M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Amount__c</fullName>
        <description>Amount of Financial Security</description>
        <label>Amount of Financial Security</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Amount_of_Financial_Security2__c</fullName>
        <label>Amount of Financial Security2</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Amount_of_Financial_Security3__c</fullName>
        <label>Amount of Financial Security3</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Amount_of_Financial_Security4__c</fullName>
        <label>Amount of Financial Security4</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Any_Country_specific_rules__c</fullName>
        <description>Any Country specific rules or limitation of cash collection ?</description>
        <label>Any Country specific rules</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Any_Liquidated_Damages_modeled__c</fullName>
        <description>Any Liquidated Damages modeled in the contract ?</description>
        <label>Any Liquidated Damages modeled?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Are_there_Embedded_Derivative__c</fullName>
        <description>Are there Embedded Derivatives contained in contract?</description>
        <label>Are there Embeded Derivatives contained?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Are_there_Embedded_Derivatives__c</fullName>
        <description>Are there Embedded Derivatives contained in Contract ?</description>
        <label>Are there Embed Deriv contained?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_As_Sold_CM_Percent__c</fullName>
        <label>Oppty CM%</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Automatic_Renewal2__c</fullName>
        <label>Automatic Renewal2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Automatic_Renewal3__c</fullName>
        <label>Automatic Renewal3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Automatic_Renewal4__c</fullName>
        <label>Automatic Renewal4</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bid_Legal_Entity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GE Bid Legal Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ITO - OTR Handoffs</relationshipLabel>
        <relationshipName>ITO_OTR_Handoffs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_to_City__c</fullName>
        <label>Bill to City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_to_Country__c</fullName>
        <label>Bill to Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_to_Postal_or_Zip_Code__c</fullName>
        <label>Bill to Postal or Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_to_State_or_Province__c</fullName>
        <label>Bill to State or Province</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_to_Street_Address_1__c</fullName>
        <label>Bill to Street Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Bill_to_Street_Address_2__c</fullName>
        <label>Bill to Street Address 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Billing_Currency__c</fullName>
        <label>Billing Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_CEName__c</fullName>
        <label>CEName</label>
        <picklist>
            <picklistValues>
                <fullName>Altair Filter Technology Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altair Filter Technology Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMI GE Automatizacion S. de R. L. de C.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMI GE, LLC (USA Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Electronic Systems Inc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_CE_Name__c</fullName>
        <description>CE Name 2nd picklist</description>
        <label>CE Name</label>
        <picklist>
            <controllingField>GE_ES_Gold_ID__c</controllingField>
            <picklistValues>
                <fullName>Altair Filter Technology Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Altair Filter Technology Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMI GE Automatizacion S. de R. L. de C.V.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMI GE, LLC (USA Sales)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Electronic Systems Inc.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Consortium__c</fullName>
        <label>GE Consortium?:</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contract_Effective_Date__c</fullName>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contract_Refer_for_Escalation_Lang__c</fullName>
        <label>Contract Reference for Escalation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contract_or_PO_Number__c</fullName>
        <label>Contract or PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Contractual_Service_Deal__c</fullName>
        <description>Contractual Service Deal</description>
        <label>Contractual Service Deal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Country_Place_of_Work__c</fullName>
        <label>End User Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA AND BARBUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELARUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA AND HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRUNEI DARUSSALAM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Creating_a_Permanent_Establishment__c</fullName>
        <description>Is the Onshore Legal Entity creating a Permanent Establishment?</description>
        <label>Creating a Permanent Establishment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Credit_Limit_US__c</fullName>
        <label>Credit Limit (US$)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cross_region__c</fullName>
        <description>Cross Region Execution ?</description>
        <label>Cross Region Execution</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cure_Period2__c</fullName>
        <label>Cure Period2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cure_Period3__c</fullName>
        <label>Cure Period3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Cure_Period4__c</fullName>
        <label>Cure Period4</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Currency_of_Bond_or_Bank_Guarant4__c</fullName>
        <label>Currency of Bond or Bank Guarant</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Currency_of_Bond_or_Bank_Guaranty2__c</fullName>
        <label>Currency of Bond or Bank Guaranty2</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Currency_of_Bond_or_Bank_Guaranty3__c</fullName>
        <label>Currency of Bond or Bank Guaranty3</label>
        <picklist>
            <picklistValues>
                <fullName>AFN Afghani Afganistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL Lek Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZD Dinar Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Peseta Andorran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AOA New Kwanza Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS Peso Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWG Guilder Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD Dollar Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZM Manat Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZN Manat (New) Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSD Dollar Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHD Dinar Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT Taka Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BBD Dollar Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BYR Ruble Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZD Dollar Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XOF Franc Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMD Dollar Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTN Ngultrum Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOB Boliviano Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAM Marka Bosnia Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BWP Pula Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL Real Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BND Dollar Brunei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BGN Lev Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMK Kyat Burma / Myanmar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIF Franc Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KHR Riel Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD Dollar Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVE Escudo Cape Verde</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>